# replacer

./: CMakeLists.txt
examples/rep-grep/: CMakeLists.txt  main.cxx
include/replacer/: FileMatches.hpp  IterateFilesystem.hpp  LineMatches.hpp  LineReplacer.hpp  MatchSpan.hpp  NamedValue.hpp  Utils.hpp  fs.hpp
src/: CMakeLists.txt  FileMatches.cxx  LineReplacer.cxx  application.cxx  application.hpp  file.cxx  file.hpp  filesystem.hpp  main.cxx  match.hpp  options.hpp  search_results.cxx  search_results.hpp  theme.hpp  view_item.cxx  view_item.hpp
tests/: CMakeLists.txt  FileMatchesIterationTests.cxx  FileMatchesTests.cxx  IterateFilesystemTests.cxx  LineMatchesTests.cxx  LineReplacerTests.cxx  UC_IterateFilesystemAndPrintMatches.cxx
tests/mocks/: FsIteratorMock.hpp  StreamOpenerMock.hpp
